feat: show all products

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>牙牙商城</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"/>
     <link rel="apple-touch-icon" sizes="180x180"
           href="{{ url_for('static', filename='favicon/apple-touch-icon.png') }}">
     <link rel="icon" type="image/png" sizes="32x32"
@@ -26,5 +27,6 @@
     {% endblock %}
 </div>
 <script src="{{ url_for('static', filename='javascript/bootstrap.bundle.min.js') }}"></script>
+<script src="https://use.fontawesome.com/e4b95b602e.js"></script>
 </body>
 </html>
