--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,12 @@
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .products-card-title {
-    height: 3rem;
+  height: 3rem;
+}
+
+.product-card {
+  max-width: 800px;
 }
