--- a/templates/products/new.html
+++ b/templates/products/new.html
@@ -1,30 +1,48 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form class="row g-3" method="POST" action="/products/new">
+<form class="row g-3 needs-validation" method="POST" action="/products/new" novalidate>
     {{ form.csrf_token }}
     <div class="col-md-6">
         {{ form.name.label(class="form-label") }}
         {{ form.name(class="form-control", type="text", maxlength=60, autocomplete="on", required="required",
         autofocus="autofocus") }}
+        <div class="invalid-feedback">
+            請輸入商品名稱。名稱不可超過 20 個中文字。
+        </div>
     </div>
+
     <div class="col-md-3">
         {{ form.price.label(class="form-label") }}
         {{ form.price(class="form-control", type="number", min=0, max=2147483647, step=1, autocomplete="on",
         required="required") }}
+        <div class="invalid-feedback">
+            請輸入價格。價格須為 0 至 2147483647 之間的整數。
+        </div>
     </div>
+
     <div class="col-md-3">
         {{ form.inventory.label(class="form-label") }}
         {{ form.inventory(class="form-control", type="number", min=0, max=2147483647, step=1, autocomplete="on",
         required="required")}}
+        <div class="invalid-feedback">
+            請輸入數量。數量須為 0 至 2147483647 之間的整數。
+        </div>
     </div>
+
     <div class="col-md-12">
         {{ form.image.label(class="form-label") }}
         {{ form.image(class="form-control", type="url", maxlength=100) }}
+        <div class="invalid-feedback">
+            請輸入格式正確的網址。網址不可超過 100 個英文字。
+        </div>
     </div>
     <div class="col-md-12">
         {{ form.description.label(class="form-label") }}
         {{ form.description(class="form-control",rows="5", maxlength=2000) }}
+        <div class="invalid-feedback">
+            描述不可超過 666 個中文字。
+        </div>
     </div>
     <div class="col-md-4">
         {{ form.category.label(class="form-label") }}
@@ -34,4 +52,6 @@
         <button class="btn btn-secondary" type="submit">上架商品</button>
     </div>
 </form>
+
+<script src="{{ url_for('static', filename='javascript/bootstrap_form_validator.js') }}"></script>
 {% endblock %}
