feat: user can add product to cart

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,10 @@
             <div class="card-body pt-0">
                 <div class="d-flex justify-content-between">
                     <p class="card-text d-flex align-items-center mb-0">$ {{ product.price }}</p>
-                    <i class="fa fa-cart-plus fa-2x"></i>
+                    <form method="post" action="{{ url_for('carts.new_cart', product_id=product.id)}}">
+                        <button class="btn" type="submit"><i class="fa fa-cart-plus fa-2x"></i></button>
+                    </form>
+
                 </div>
             </div>
         </div>
