refactor: reuse html code

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% from 'macros.html' import price_and_cart_btn %}
 
 {% block content %}
 <div class="row">
@@ -12,11 +13,7 @@
             </a>
             <div class="card-body pt-0">
                 <div class="d-flex justify-content-between">
-                    <p class="card-text d-flex align-items-center mb-0">$ {{ product.price }}</p>
-                    <form method="post" action="{{ url_for('carts.new_cart', product_id=product.id)}}">
-                        <button class="btn" type="submit"><i class="fa fa-cart-plus fa-2x"></i></button>
-                    </form>
-
+                    {{ price_and_cart_btn(product) }}
                 </div>
             </div>
         </div>
