--- a/templates/products/product.html
+++ b/templates/products/product.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% from 'macros.html' import price_and_cart_btn %}
 
 {% block content %}
 <div class="card product-card mb-3 mx-auto border-0">
@@ -6,10 +7,7 @@
         <div class="col-md-5 d-flex flex-column align-items-center">
             <img src="{{product.image_url}}" class="img-fluid rounded-start" alt="product image">
             <div class="d-flex justify-content-evenly w-100 mt-2">
-                <p class="card-text d-flex align-items-center mb-0">$ {{ product.price }}</p>
-                <form method="post" action="{{ url_for('carts.new_cart', product_id=product.id)}}">
-                    <button class="btn" type="submit"><i class="fa fa-cart-plus fa-2x"></i></button>
-                </form>
+                {{ price_and_cart_btn(product) }}
             </div>
         </div>
         <div class="col-md-7">
