--- a/templates/carts/cart_items.html
+++ b/templates/carts/cart_items.html
@@ -1,25 +1,31 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
-    {% for item in cart_items %}
-    <div class="row mt-2">
-        <div class="col-sm-12 col-lg-2 d-flex justify-content-center">
+{% for item in cart_items %}
+<div class="card mb-3">
+    <div class="row g-0">
+        <div class="col-sm-2 col-lg-1 d-flex justify-content-center align-items-center">
             <img src="{{ item.product.image_url }}" class="img-fluid rounded-start" alt="product image">
         </div>
-        <div class="col-sm-6 col-lg-2">
-            <h5>{{ item.product.name }}</h5>
-        </div>
-        <div class="col-sm-6 col-lg-2">
-            數量：{{ item.quantity }}
-        </div>
-        <div class="col-sm-6 col-lg-3">
-            單價：$ {{ item.product.price }}
-        </div>
-        <div class="col-sm-6 col-lg-3">
-            總價：$ {{ item.quantity * item.product.price }}
+        <div class="col-sm-10 col-lg-11">
+            <div class="card-body container">
+                <div class="row mt-2">
+                    <div class="col-sm-12 col-lg-3">
+                        <h5 class="card-title">{{ item.product.name }}</h5>
+                    </div>
+                    <div class="col-sm-4 col-lg-3">
+                        單價：$ {{ item.product.price }}
+                    </div>
+                    <div class="col-sm-4 col-lg-3">
+                        數量：{{ item.quantity }}
+                    </div>
+                    <div class="col-sm-4 col-lg-3">
+                        總價：$ {{ item.quantity * item.product.price }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    {% endfor %}
 </div>
+{% endfor %}
 {% endblock %}
