--- a/templates/carts/cart_items.html
+++ b/templates/carts/cart_items.html
@@ -23,7 +23,7 @@
                               novalidate
                         >
                             {{ form.csrf_token }}
-                            {{ form._method(value="PUT") }}
+                            {{ form.method(value="PUT") }}
                             <div class="input-group">
                                 <span class="input-group-text">數量：</span>
                                 {{ form.quantity(class="form-control", type="number", min=1, max=2147483647, step=1,
