feat: seller can delete product

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
             </a>
             <div class="card-body pt-0">
                 <div class="d-flex justify-content-between">
-                    {{ price_and_cart_btn(product) }}
+                    {{ price_and_cart_btn(product, user_id) }}
                 </div>
             </div>
         </div>
