--- a/templates/products/product.html
+++ b/templates/products/product.html
@@ -7,7 +7,7 @@
         <div class="col-md-5 d-flex flex-column align-items-center">
             <img src="{{product.image_url}}" class="img-fluid rounded-start" alt="product image">
             <div class="d-flex justify-content-evenly w-100 mt-2">
-                {{ price_and_cart_btn(product) }}
+                {{ price_and_cart_btn(product, user_id) }}
             </div>
         </div>
         <div class="col-md-7">
