--- a/templates/carts/cart_items.html
+++ b/templates/carts/cart_items.html
@@ -2,21 +2,29 @@
 
 {% block content %}
 {% for item in cart_items %}
-<div class="card mb-3">
+<div class="card mb-3 border-0 border-bottom">
     <div class="row g-0">
-        <div class="col-sm-2 col-lg-1 d-flex justify-content-center align-items-center">
-            <img src="{{ item.image_url }}" class="img-fluid rounded-start" alt="product image">
+        <div class="col-sm-3 col-lg-2 d-flex justify-content-center align-items-center">
+            <img src="{{ item.image_url }}" class="img-fluid rounded" alt="product image">
         </div>
         <div class="col-sm-9 col-lg-10">
             <div class="card-body container">
                 <div class="row mt-2">
-                    <div class="col-sm-12 col-lg-3 py-2">
+                    <div class="col-12 d-flex justify-content-between align-items-center">
                         <h5 class="card-title">{{ item.name }}</h5>
+                        <form action="{{ url_for('carts.delete_cart_item', product_id=item.product_id)}}" method="POST">
+                            <button class="btn btn-link p-0" type="submit">
+                                <i class="fa fa-trash fa-2x text-danger"></i>
+                            </button>
+                        </form>
                     </div>
-                    <div class="col-sm-5 col-lg-2 py-2">
+                    <div class="col-sm-5 col-lg-4 py-2">
                         單價：$ {{ item.price }}
                     </div>
-                    <div class="col-sm-7 col-lg-4">
+                    <div class="col-sm-6 col-lg-4 py-2">
+                        總價：$ {{ item.quantity * item.price }}
+                    </div>
+                    <div class="col-sm-12 col-lg-4">
                         <form class="needs-validation"
                               method="POST"
                               action="{{ url_for('carts.edit_cart_item', product_id=item.product_id )}}"
@@ -32,18 +40,8 @@
                             </div>
                         </form>
                     </div>
-                    <div class="col-sm-6 col-lg-2 py-2">
-                        總價：$ {{ item.quantity * item.price }}
-                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-sm-1 col-lg-1 d-flex justify-content-center align-items-center">
-            <form action="{{ url_for('carts.delete_cart_item', product_id=item.product_id)}}" method="POST">
-                <button class="btn btn-link p-0" type="submit">
-                    <i class="fa fa-trash fa-2x text-danger"></i>
-                </button>
-            </form>
         </div>
     </div>
 </div>
