feat: user can check order

--- a/templates/carts/cart_items.html
+++ b/templates/carts/cart_items.html
@@ -25,7 +25,7 @@
                         單價：{{ item.price }}
                     </div>
                     <div class="col-sm-4 py-2">
-                        總價：{{ item.subtotal }}
+                        小計：{{ item.subtotal }}
                     </div>
                     <div class="col-sm-12">
                         <form class="needs-validation"
