--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,10 @@
                 {% if session['user'] %}
                 <li class="nav-item">
                     <a class="nav-link btn btn-btn-link mt-2" aria-current="page"
+                       href="{{ url_for('orders.get_orders') }}">我的訂單</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn btn-btn-link mt-2" aria-current="page"
                        href="{{ url_for('users.logout') }}">登出</a>
                 </li>
                 {% else %}
