refactor: put macros together

--- a/templates/products/product.html
+++ b/templates/products/product.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% from 'macros.html' import price_and_cart_btn %}
+{% from 'macros/price_and_cart_btn.html' import price_and_cart_btn %}
 
 {% block content %}
 <div class="card product-card mb-3 mx-auto border-0">
