--- a/templates/macros/orders_table.html
+++ b/templates/macros/orders_table.html
@@ -4,6 +4,7 @@
     <thead>
     <tr>
         <th scope="col">編號</th>
+        <th scope="col">明細</th>
         <th scope="col">總額</th>
         <th scope="col">狀態</th>
         <th scope="col">付款</th>
@@ -15,6 +16,7 @@
     {% for item in orders %}
     <tr>
         <th scope="row">{{ item.order_id }}</th>
+        <td><a href="{{ url_for('orders.get_order', order_id=item.order_id)}}">明細</a></td>
         <td>{{ item.amount }}</td>
         <td>{{ item.order_status }}</td>
         <td>{{ item.payment_status }}</td>
@@ -25,6 +27,6 @@
     </tbody>
 </table>
 {% else %}
-    <h3>查無訂單</h3>
+<h3>查無訂單</h3>
 {% endif %}
 {% endmacro %}
