--- a/templates/orders/order.html
+++ b/templates/orders/order.html
@@ -1,37 +1,9 @@
 {% extends 'base.html' %}
+{% from 'macros/order_item_card.html' import order_item_card %}
 
 {% block content %}
+{{ order_item_card(order.order_items, order.amount) }}
 
-<h2>明細</h2>
-{% for item in order.order_items %}
-<div class="card mb-3 border-0 border-bottom">
-    <div class="row g-0">
-        <div class="col-sm-2 col-lg-1 d-flex justify-content-center align-items-center">
-            <img src="{{ item.image_url }}" class="img-fluid rounded" alt="product image">
-        </div>
-        <div class="col-sm-10 col-lg-11">
-            <div class="card-body container">
-                <div class="row mt-2">
-                    <div class="col-12">
-                        <h5 class="card-title">{{ item.name }}</h5>
-                    </div>
-                    <div class="col-sm-4 py-2">
-                        單價：{{ item.price }}
-                    </div>
-                    <div class="col-sm-4 py-2">
-                        數量：{{ item.quantity }}
-                    </div>
-                    <div class="col-sm-4 py-2">
-                        小計：{{ item.subtotal }}
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-{% endfor %}
-<h3 class="text-end">總計：$ {{ order.amount }}</h3>
-<br/>
 <h2>訂單資訊</h2>
 <table class="table table-striped table-hover">
     <tbody>
