feat: improve ui
make checkout more handy
if order is not checked out, user cannot pay for it

--- a/templates/orders/order.html
+++ b/templates/orders/order.html
@@ -25,12 +25,20 @@
     </tr>
     <tr>
         <th scope="row">訂單狀態</th>
-        <td colspan="2">{{ order.order_status }}</td>
+        <td colspan="2">
+            {% if order.buyer_id == user_id and order.order_status == '未結帳' %}
+            <a href="{{ url_for('orders.checkout', order_id=order.id)}}">
+                <button class="btn btn-secondary">立即結帳</button>
+            </a>
+            {% else %}
+            {{ order.order_status }}
+            {% endif %}
+        </td>
     </tr>
     <tr>
         <th scope="row">付款狀態</th>
         <td colspan="2">
-            {% if order.buyer_id == user_id and order.payment_status == '未付款' %}
+            {% if order.buyer_id == user_id and order.payment_status == '未付款' and order.order_status == '已結帳' %}
             <a href="{{ url_for('orders.pay_order', order_id=order.id)}}">
                 <button class="btn btn-secondary">立即付款</button>
             </a>
