--- a/templates/macros/orders_table.html
+++ b/templates/macros/orders_table.html
@@ -1,14 +1,14 @@
 {% macro orders_table(orders, is_buyer) %}
 {% if orders %}
-<table class="table table-striped table-hover">
+<table class="table table-striped table-hover align-middle">
     <thead>
     <tr>
         <th scope="col">編號</th>
         <th scope="col">明細</th>
-        <th scope="col">總額</th>
-        <th scope="col">狀態</th>
-        <th scope="col">付款</th>
-        <th scope="col">運送</th>
+        <th scope="col" class="text-end">總額</th>
+        <th scope="col" class="text-center">狀態</th>
+        <th scope="col" class="text-center">付款</th>
+        <th scope="col" class="text-center">運送</th>
         <th scope="col">更新日期</th>
     </tr>
     </thead>
@@ -17,10 +17,18 @@
     <tr>
         <th scope="row">{{ item.order_id }}</th>
         <td><a href="{{ url_for('orders.get_order', order_id=item.order_id)}}">明細</a></td>
-        <td>{{ item.amount }}</td>
-        <td>{{ item.order_status }}</td>
-        <td>
-            {% if is_buyer and item.payment_status == '未付款' %}
+        <td class="text-end">{{ item.amount }}</td>
+        <td class="text-center">
+            {% if is_buyer and item.order_status == '未結帳' %}
+            <a href="{{ url_for('orders.checkout', order_id=item.order_id)}}">
+                <button class="btn btn-secondary">立即結帳</button>
+            </a>
+            {% else %}
+            {{ item.order_status }}
+            {% endif %}
+        </td>
+        <td class="text-center">
+            {% if is_buyer and item.payment_status == '未付款' and item.order_status == '已結帳' %}
             <a href="{{ url_for('orders.pay_order', order_id=item.order_id)}}">
                 <button class="btn btn-secondary">立即付款</button>
             </a>
@@ -28,7 +36,7 @@
             {{ item.payment_status }}
             {% endif %}
         </td>
-        <td>{{ item.shipping_status }}</td>
+        <td class="text-center">{{ item.shipping_status }}</td>
         <td>{{ item.update_time }}</td>
     </tr>
     {% endfor %}
