--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 <body class="bg-light">
 <nav class="navbar navbar-expand-sm navbar-dark bg-secondary bg-gradient">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('home') }}">牙牙商城</a>
+        <a class="navbar-brand" href="{{ url_for('products.get_products') }}">牙牙商城</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
