--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,25 @@
                     <a class="nav-link btn btn-btn-link mt-2" aria-current="page"
                        href="{{ url_for('orders.get_orders') }}">我的訂單</a>
                 </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle mt-2" href="#" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        賣家專區
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="{{ url_for('products.new_product') }}">上架商品</a></li>
+                        <li>
+                            <a
+                                    class="dropdown-item"
+                                    href="{{ url_for('products.get_seller_products', seller_id=session['user']['id']) }}"
+                            >
+                                我的商品
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+
                 <li class="nav-item">
                     <a class="nav-link btn btn-btn-link mt-2" aria-current="page"
                        href="{{ url_for('users.logout') }}">登出</a>
@@ -49,6 +68,7 @@
                     <a class="nav-link btn btn-link mt-2" aria-current="page"
                        href="{{ url_for('users.login') }}">登入</a>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link btn btn-btn-link mt-2" aria-current="page"
                        href="{{ url_for('users.new_user') }}">註冊</a>
