--- a/templates/macros/pagination.html
+++ b/templates/macros/pagination.html
@@ -1,4 +1,4 @@
-{% macro pagination(pagination, endpoint, seller_id) %}
+{% macro pagination(pagination, endpoint, seller_id, selected_options) %}
 <nav aria-label="Page navigation">
     <ul class="pagination justify-content-center">
         {% for page in pagination.iter_pages(left_edge=1, left_current=2, right_current=3, right_edge=1) %}
@@ -6,11 +6,21 @@
                 {% if page != pagination.page %}
                 <li class="page-item">
                     {% if seller_id %}
-                    <a class="page-link link-secondary" href="{{ url_for(endpoint,seller_id=seller_id, page=page) }}">
+                    <a class="page-link link-secondary"
+                       href="{{ url_for(endpoint, seller_id=seller_id, page=page, keyword=selected_options['keyword'],
+                                        category_id=selected_options['category_id'],
+                                        sorting_field=selected_options['sorting_field'],
+                                        order=selected_options['order']) }}"
+                    >
                         {{ page }}
                     </a>
                     {% else %}
-                    <a class="page-link link-secondary" href="{{ url_for(endpoint, page=page) }}">
+                    <a class="page-link link-secondary"
+                       href="{{ url_for(endpoint, page=page, keyword=selected_options['keyword'],
+                                        category_id=selected_options['category_id'],
+                                        sorting_field=selected_options['sorting_field'],
+                                        order=selected_options['order']) }}"
+                    >
                         {{ page }}
                     </a>
                     {% endif %}
